@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

'left to right direction

class Vehicle {
    - Brand
    - Model
    - Type
    - Tare
    - Gross Weight
    - Current Km
    - Register Date
    - Acquisition Date
    - Maintenance/Check-up Frequency in km
}

class VehicleRepository {
    + registerVehicleCheckUp(licensePlate, currentKM, checkUpDate)
}

 class VehicleCheckUpRepository{
      + registerVehicleCheckUp(licensePlate, currentKM, checkUpDate)
 }


class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getVehicleRepository()
    + getVehicleCheckUpRepository()
}

class RegisterVehicleCheckUpController {
    + RegisterVehicleCheckUpController(vehicleRepository, VehicleCheckUpRepository)
    + registerVehicleCheckUp(licensePlate, currentKM,checkUpDate)
}

class RegisterVehicleUI {
}

Repositories -> Repositories : instance

RegisterVehicleUI .> RegisterVehicleCheckUpController

RegisterVehicleCheckUpController .> Repositories : repositories



RegisterVehicleCheckUpController ..> VehicleRepository : vehicleRepository
RegisterVehicleCheckUpController .> VehicleCheckUpRepository: vehicleCheckUpRepository
VehicleCheckUpRepository .> VehicleRepository: vehicleRepository
Repositories --> "1" VehicleRepository


VehicleRepository "1" --> "*" Vehicle : stores



@enduml